# skill-manager

./: README.md  electron-builder.yml  index.html  package-lock.json  package.json  vite.config.js
dist-electron/: main.js  preload.js
electron/: main.ts  preload.ts
src/: App.css  App.tsx  data.ts  main.js  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AgentModal.tsx  DetailPanel.tsx  Header.tsx  Sidebar.tsx  SkillCard.tsx  SkillGrid.tsx  StatusBar.tsx  TagBar.tsx
